# parsing-agent

./: .gitignore  AGENTS.md  README.ko.md  README.md  pyproject.toml  sample.md
benchmarks/: run_head_to_head.py
benchmarks/results/: RESULTS.md  results.json
docs/: structured-node-rules-prd.md
examples/: cost_estimate.xlsx  eia_summary.docx  kmst_stats.csv  minutes.odt  notice.html  pipeline.yaml  stations.xml
golden/: PILOT_FINDINGS.md  README.md  labeling_tool.py  run_golden_eval.py
golden/labels/: 35_(본안) 동북아 LNG 0200 사업개요_F.json  example.json  schema.json
src/parsing_agent/: cli.py  config.py  docling_parser.py  evaluation.py  filetype.py  format_parsers.py  fusion.py  ingestion.py  judge.py  llm_repair.py  llm_usage.py  models.py  monitoring.py  ocr.py  parsers.py  repair.py  reporting.py  table_metrics.py  textutil.py  toc.py  tracing.py  triage.py  visual_repair.py  visual_tables.py  visual_tasks.py  workflow.py  workflow_state.py
src/parsing_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_evaluation_structured.py  test_format_parsers.py  test_fusion.py  test_judge_multimodal.py  test_layout_first_parser.py  test_llm_repair.py  test_llm_usage.py  test_ocr.py  test_p0_stability.py  test_repair_fanout.py  test_repair_routing.py  test_split_table_merge.py  test_table_metrics.py  test_toc.py  test_trace_contracts.py  test_visual_crop.py  test_workflow_upgrades.py
