[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parsing-agent-system"
version = "0.1.0"
description = "Agent system for parsing, evaluating, repairing, and selecting document parse outputs."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langsmith>=0.5.0",
    "opendataloader-pdf>=2.4.0",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
bench = [
    "markitdown[pdf]>=0.1.6",
    "pymupdf4llm>=1.27.2.3",
]
bench-docling = [
    "docling>=2.108.0",
]
# macOS 전용: docling OCR 백엔드로 Apple Vision 사용
# (한국어 래스터 그림표 실측에서 기본 RapidOCR 대비 압승 — 골든 kocw 케이스)
mac-ocr = [
    "ocrmac>=1.0.1",
]

[project.scripts]
parsing-agent = "parsing_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
